# a-tad

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  kgl_run_vae_discovery.ipynb
scripts/: download_data.py  run_changepoint_detection.py  run_feature_extraction.py  run_gmm_discovery.py  run_hmm_discovery.py  run_segmentation.py  run_vae_gmm_discovery.py
src/tactical/: __init__.py  config.py  exceptions.py
src/tactical/adapters/: __init__.py  base.py  cache.py  schemas.py  statsbomb.py
src/tactical/features/: __init__.py  base.py  pipeline.py  registry.py  tier1.py  tier2.py  tier3.py
src/tactical/models/: __init__.py  base.py  changepoint.py  discovery.py  gmm.py  hmm.py  hmm_discovery.py  preprocessing.py  selection.py  vae.py  vae_discovery.py
src/tactical/segmentation/: __init__.py  possession.py  windows.py
tests/: conftest.py  test_config.py  test_conftest.py  test_exceptions.py
tests/test_adapters/: test_cache.py  test_integration.py  test_lineups.py  test_schemas.py  test_statsbomb.py
tests/test_features/: test_extraction_pipeline.py  test_pipeline.py  test_registry.py  test_tier1.py  test_tier2.py  test_tier3.py
tests/test_models/: test_changepoint.py  test_gmm.py  test_gmm_discovery.py  test_hmm.py  test_hmm_discovery.py  test_integration.py  test_preprocessing.py  test_vae.py  test_vae_discovery.py
tests/test_segmentation/: test_integration.py  test_possession.py  test_windows.py
