[project]
name = "a-tad"
version = "0.1.0"
description = "A modular analytics engine for discovering latent tactical states in football match data."
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "orjson>=3.9",
    "statsbombpy>=1.11",
    "scikit-learn>=1.4",
    "hmmlearn>=0.3",
    "ruptures>=1.1",
    "scipy>=1.12",
    "numpy>=1.26",
    "torch>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "numba>=0.59",
    "umap-learn>=0.5.7",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tactical"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
    "types-tqdm>=4.67.3.20260205",
]
